# TheConversionEngine

./: .env.example  .gitignore  .gitmodules  README.md  ablation_results.json  baseline.md  command.md  evidence_graph.json  held_out_traces.jsonl  invoice_summary.json  memo.md  method.md  pyproject.toml  render.yaml
agent/: __init__.py  config.py  main.py
agent/api/: dashboard.py  routes.py
agent/channels/: __init__.py  email.py  sms.py  voice.py
agent/crm/: __init__.py  hubspot.py
agent/enrichment/: ai_maturity.py  common.py  competitor_gap.py  connectors.py  crunchbase_odm.py  job_post_scraper.py  layoffs_fyi_signal.py  leadership_changes.py  service.py
agent/evaluation/: tau2.py
agent/generation/: __init__.py  service.py
agent/observability/: langfuse.py  tracing.py
agent/orchestration/: handoff.py  service.py
agent/policies/: __init__.py  service.py
agent/scheduling/: __init__.py  calcom.py  context_brief.py
agent/schemas/: __init__.py  briefs.py  conversation.py  dashboard.py  prospect.py  tools.py
agent/seed/: loader.py
agent/storage/: __init__.py  (+2 more)
docs/: Draft Tenacious Sales Materials Template.md
eval/: README.md  baseline.md  run_tau2_retail.sh  score_log.json  trace_log.jsonl
planning/: design.md  requirements.md
probes/: README.md  adversarial_probe_library.json  failure_taxonomy.md  probe_library.md  target_failure_mode.md
tests/: test_ai_maturity.py  test_channels_crm_scheduling.py  test_competitor_gap.py  test_dashboard.py  test_enrichment_policy.py  test_enrichment_signals.py  test_http_utils.py  test_seed_materials.py
(+6 files in other folders)
