[project]
name = "conversion-engine"
version = "0.1.0"
description = "High-level scaffold for the Week 10 Tenacious conversion engine challenge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "langfuse>=3.5.1",
    "pydantic==2.11.4",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
